<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="@dimen/widget_margin">

    <FrameLayout
        android:id="@+id/stock_widget_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?android:attr/listPreferredItemHeightSmall"
        android:background="@color/colorPrimary">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@android:color/white"
            android:contentDescription="@string/widget_title"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_gravity="center"/>

    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@android:color/white">

        <ListView
            android:id="@+id/stock_widget_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:divider="@null"
            android:dividerHeight="0dp"
            tools:listitem="@layout/stock_widget_list_item"
            android:contentDescription="@string/stock_list_widget_description"/>

        <TextView
            android:id="@+id/stock_widget_empty"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textColor="#ffffff"
            android:textStyle="bold"
            android:contentDescription="@string/empty_view_message_description"
            android:text="@string/empty_view_message"
            android:textSize="20sp" />
    </FrameLayout>

</LinearLayout>